inconsistent checks for two phase index build support across C++ and JS

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 4.3.3
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-12-02
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      JS tests currently use the IndexBuildTest.supportsTwoPhaseIndexBuild() helper function, introduced in SERVER-44439, to check for two phase index build support. This helper function checks the server parameter enableTwoPhaseIndexBuild. However, the internal server code check uses IndexBuildsCoordinator::supportsTwoPhaseIndexBuild(), which is dependent on both the server parameter and the current FCV setting. It would be less confusing if we could unify these checks. One possibility might be to expose the server setting through a new field in the serverStatus output

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: