SERVER-44742 add supportsTwoPhaseIndexBuild to storageEngine server status section